# python25

./: README.md
rpa/kavana/: .coverage  .env  .gitignore  README.md  a1.py  a2.py  c1.py  c2.py  coverage.lcov  download_response  extracted_financial_data.csv  k1.py  k2.py  k3.py  kavana.py  kavana.spec  main.py  make.sh  mkdocs.yml  parsed_financial_data.csv  post1.py  pyproject.toml  requirements.txt  run_test.sh  test.txt
rpa/kavana/.github/: copilot-instructions.md
rpa/kavana/0tests/: test_expr_evaluator.py  test_point_region_utils.py  test_tokenize.py
rpa/kavana/designs_docs/: Array와HashMap.md  OCR-브라우저.md  OCR강화.md  RPA명령어.md  TODO.md  custom_token.md  db명령어.md  image명령어.md  kavana_script.md  list.md  네트워크명령어.md  명령어.md  문자열.md  문제점.md  연산자규칙.md  한국투자증권.md
rpa/kavana/docs/: 1.html  Array와HashMap.md  RPA명령어.md  builtin.md  commands.md  getting-started.md  grammar.md  index.md  kavana_script.md  list.md  ymd.md  내장함수.md  연산자규칙.md
rpa/kavana/examples/: L1.py  L2.py  a1.py  a2.py  a3.py  a4.py  b1.py  c1.py  c2.py  c3.py  c4.py  common.kvs  d1.py  d2.py  e1.py  e2.py  e3.py  env.test  f1.py  hello.kvs  k1.py  k3.py  k4.py  log.kvs  log1.py  p1.py  print1.py  q1.py  r1.py  r2.py  s1.py  t1.py  template.kvs
rpa/kavana/hts_examples/: common.kvs  common_functions.kvs  efriend64.py  efriend64_data.kvs  efriend64_start.py  qhd_120.kvs
rpa/kavana/http_kvs/: kofia_menu_4.py  kofia_menu_4_common.kvs  post1.py
rpa/kavana/lib/: actions.py  config.py  enums.py  excel_utils.py  exceptions.py  point_region.py  process.py  rpa_misc.py  rpa_utils.py  scales.py
rpa/kavana/lines/: -l.txt
rpa/kavana/ocr_work/: line_work1.py  line_work2.py  split_line1.py  split_line2.py
rpa/kavana/old_docs/: RPA명령어.md  kavana_script.md  내장함수.md
rpa/kavana/overrides/: main.html
rpa/kavana/scripts/: .env.test  0.kvs  1.kvs  2.kvs  3.kvs  4.kvs  5.kvs  6.kvs  a.kvs  common.kvs  list0.kvs  template1.kvs
(+426 files in other folders)
